--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "loysha.com",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sergeyloysha.github.io/loysha.com",
+  "homepage": "https://loysha.com",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "node-sass-chokidar": "^1.0.1",
